[project]
name = "esp-flasher-mcp"
version = "0.1.0"
description = "MCP server for ESP32 build/flash/monitor automation"
authors = [{name = "Ming"}]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.2.0",
]

[project.scripts]
esp-flasher-mcp = "esp_flasher_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/esp_flasher_mcp"]
